1999-09-20  Bob Woodside  <proteus@pcnet.com>

	* fvwm/events.c (HandleButtonPress): Dropped the raise on window
	decoration clicks for ClicToFocusDoesntRaise. This causes double
	raises in a lot of configurations, and seems counter to the sense
	of ClickToFocusDoesntRaise.
	*  fvwm/stack.c (inner_RaiseOrLowerWindow): Changed the Exceed
	Raise Hack not to raise unmanaged windows; this caused problems
	with some apps.

1999-09-21  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/move_resize.c (resize_window):
	(moveLoop):
	(resize_window):
	undraw the outline before dispatching event since this possibly causes
	some graphics to be drawn

	* fvwm/functions.c (CheckActionType): handle expose events while
	waiting for the decision between "C", "M", "H" and "D" in a complex
	function

1999-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (resize_window):
	aborting works with opaque resizing
	fixed wandering window when resizing opaque
	fixed window width/height being one pixel less when resizing opaque

1999-09-19  Dominik Vogt  <dominik_vogt@gmx.de>

	* configure.in: changed version to 2.3.8

	* fvwm/events.c (HandlePropertyNotify): fixed bug with xterm:
	<maximize, change font, normalize> got the window size wrong

	* fvwm/fvwm.h (common_flags):
	* fvwm/window_flags.h (DO_RESIZE_OPAQUE):
	* fvwm/style.h (SDO_RESIZE_OPAQUE):
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/move_resize.c (DoResize):
	(resize_window):
	implemented opaque resizing (styles ResizeOpaque and ResizeOutline)
	base on patch by Tony Finch

1999-09-18  Bob Woodside  <proteus@pcnet.com>

	* fvwm/builtins.c:
	* fvwm/fvwm2.1:
	* fvwm/screen.h:
	* fvwm/stack.c: Added new BugOpts option, RaiseAboveUnmanaged, for
	co-existence with apps like KFM that use long-lived oerride_redirect
	windows.

1999-09-16  Mikhael Goikhman  <migo@homemail.com>

	* NEWS: announced a new default FvwmBanner logo
	* AUTHORS: added an entries for Alan F. Ho and myself

1999-09-16  Dominik Vogt  <dominik_vogt@gmx.de>
